Finished the page. Organization is awful, but better luck for me next time

--- a/index.html
+++ b/index.html
@@ -26,12 +26,43 @@
       </div>	     
     </div>
     <div class="info">
+		<h2>There is some information</h2>
+		<div class="info-content">
+			<div class="image-block">
+				<img alt="Empty">
+				<div>There is some text under an illustration image</div>
+			</div>
+			<div class="image-block">
+				<img alt="Empty">
+				<div>There is some text under an illustration image</div>
+			</div>
+			<div class="image-block">
+				<img alt="Empty">
+				<div>There is some text under an illustration image</div>
+			</div>
+			<div class="image-block">
+				<img alt="Empty">
+				<div>There is some text under an illustration image</div>
+			</div>
+		</div>
+	</div>
     </div>
     <div class="quote">
+		<div class="text-quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam ex non mauris molestie mollis. Nullam libero ligula, porttitor tempor luctus sed, aliquam quis erat. Etiam vitae nunc in sem bibendum rutrum eu at ligula. Nulla at sem in ligula lacinia ultricies ac quis nisl. Curabitur sit amet orci eget enim vestibulum blandit. 
+		
+		<div class="name-quote">-Toro, tuluns vu Datlatain</div></div>
     </div>
     <div class="lower">
+		<div class="lower-box">
+			<div>
+				<div class="lower-text-big">Call to action! It's time!</div>
+				<div class="lower-text-small">Sign up for our product by clicking the button right there</div>
+			</div>
+			<button class="inv" type="button">Sign up</button>
+		</div>
     </div>
     <div class="footer">
+		The Odin Project 2023
     </div>
   </body>
   
